Changes for the Labyrinth-Plugin-Articles-Diary

1.03    2013-01-06
        - added indexes to SQL.
        - change file dates changed to meet W3CDTF standards.
        - fixed searches.
        - updated test suite.

1.02    2012-06-10
        - module name fixes in request file.
        - META tests no longer require specific versions.
        - added minimum perl version (5.006).
        - reworked Makefile.PL for clarity.

1.01    2011-01-19
        - path fixes in vhost.

1.00    2011-01-19
        - first official release